gccida/g2/ix86_split_to_parts
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_split_to_parts/src/i386.c:9042:52: error: must use 'enum' tag to refer to type 'machine_mode'
int  ix86_split_to_parts( rtx operand, rtx *parts, machine_mode mode) 
                                                   ^
                                                   enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_split_to_parts/src/i386.c:9055:4: error: expected ';' after expression
rtx v16; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_split_to_parts/src/i386.c:9055:5: error: use of undeclared identifier 'v16'
rtx v16; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_split_to_parts/src/i386.c:9056:4: error: expected ';' after expression
rtx pool_constant; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_split_to_parts/src/i386.c:9056:5: error: use of undeclared identifier 'pool_constant'; did you mean 'get_pool_constant'?
rtx pool_constant; // rax 
    ^~~~~~~~~~~~~
    get_pool_constant
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_split_to_parts/src/rtl.h:1305:12: note: 'get_pool_constant' declared here
extern rtx get_pool_constant            PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_split_to_parts/src/i386.c:9065:4: error: expected ';' after expression
rtx op; // [rsp+8h] [rbp-60h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_split_to_parts/src/i386.c:9065:5: error: use of undeclared identifier 'op'
rtx op; // [rsp+8h] [rbp-60h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_split_to_parts/src/i386.c:9067:1: error: must use 'union' tag to refer to type 'real_extract'
real_extract u; // [rsp+30h] [rbp-38h] BYREF 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_split_to_parts/src/i386.c:9070:12: error: expected identifier or '('
 struct op = operand; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_split_to_parts/src/i386.c:9119:28: error: expected ')'
|| (  struct pool_constant = get_pool_constant( rtx), 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_split_to_parts/src/i386.c:9119:4: note: to match this '('
|| (  struct pool_constant = get_pool_constant( rtx), 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_split_to_parts/src/i386.c:9123:6: error: expected expression
v18) ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_split_to_parts/src/i386.c:9127:21: error: use of undeclared identifier 'op'
if ( !push_operand( op, VOIDmode) ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_split_to_parts/src/i386.c:9129:17: error: use of undeclared identifier 'op'
v16 = copy_rtx( op); 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_split_to_parts/src/i386.c:9129:1: error: use of undeclared identifier 'v16'
v16 = copy_rtx( op); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_split_to_parts/src/i386.c:9130:14: error: use of undeclared identifier 'v16'
*( ( _BYTE *)v16 + 2) = ( ( BYTE3( target_flags) & 2) != 0) + 4; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_split_to_parts/src/i386.c:9131:12: error: use of undeclared identifier 'v16'
parts[2] = v16; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_split_to_parts/src/i386.c:9132:12: error: use of undeclared identifier 'v16'
parts[1] = v16; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_split_to_parts/src/i386.c:9133:10: error: use of undeclared identifier 'v16'
*parts = v16; 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_split_to_parts/src/i386.c:9152:12: error: use of undeclared identifier 'op'
split_ti( &op, 1, parts, parts + 1); 
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_split_to_parts/src/obj/i386.o] Error 1
